--- a/1019-h/1019-h.htm
+++ b/1019-h/1019-h.htm
@@ -10,7 +10,7 @@
       Poems, by Currer, Ellis, and Acton Bell (Bronte Sisters)
     </title>
     <style type="text/css" xml:space="preserve">
-    
+
     body { margin:5%; background:#faebd0; text-align:justify}
     P { text-indent: 1em; margin-top: .25em; margin-bottom: .25em; }
     H1,H2,H3,H4,H5,H6 { text-align: center; margin-left: 15%; margin-right: 15%; }
@@ -28,7 +28,7 @@
                margin: 0; padding: 0; position: absolute; right: 1%;
                text-align: right;}
     pre        { font-style: italic; font-size: 90%; margin-left: 10%;}
-    
+
 </style>
   </head>
   <body>
@@ -4917,7 +4917,7 @@ An Anonymous Volunteer, and David Widger
      Before their dross is purged away;
      Enough for me to know&mdash;
 
-     That when the clip of wrath is drained,
+     That when the cup of wrath is drained,
      The metal purified,
      They'll cling to what they once disdained,
      And live by Him that died.
